🐛 Fix mixed mute endpoints
